[package]
name = "fisherman"
version = "0.0.1"
edition = "2024"
authors = ["Evgeny Abramovich"]
license = "MIT"
description = "A simple CLI tool for managing git hooks"
readme = "README.md"
repository = "https://github.com/evg4b/fisherman"

[dependencies]
core = { path = "core" }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.44"
rayon = "1.10"

[dev-dependencies]
tempdir = "0.3"
