[package]
name = "fisherman"
version = "0.0.1"
edition = "2024"
authors = ["Evgeny Abramovich"]
license = "MIT"
description = "A simple CLI tool for managing git hooks"
readme = "README.md"
repository = "https://github.com/evg4b/fisherman"

[dependencies]
core = { path = "core" }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.44"
rayon = "1.10"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0.149"
serde_yaml = "0.9.33"
toml = "1.0.6"

[features]
default = []
integration-tests = []

[workspace]
members = [
    "core"
]