[package]
name = "fisherman"
version = "0.0.1"
edition = "2024"
authors = ["Evgeny Abramovich"]
license = "MIT"
description = "A simple CLI tool for managing git hooks"
readme = "README.md"
repository = "https://github.com/evg4b/fisherman"

[dependencies]
fisherman_core = { path = "./fisherman_core" }
anyhow = "1.0.44"

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0.149"
serde_yaml = "0.9.33"
toml = "1.0.6"

[workspace]
members = ["fisherman_core"]
